--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
 		<body background="IMG-20210428-WA0035.jpg">
 		<h3 align="center"><font color="white"><b><b></b></b>WELCOME TO MY WEBPAGE!!!</font></h3>
 		<a href="Students form.html" align="center">STUDENTS MATRIC</a><br><br>
-		<a href="examination.html"> STUDENTS DATA</a><br><br>
-	<a href="foot.html"> OREDERD LIST </a><br><br>
-	<a href="lis time table.html"> TIME TABLE</a><br><br>
-	<a href="school need.html">SCHOOL NEEDS</a><br><br>
 	<a href="r.html">STUDENTS WEBSITE REGISTRATION</a><br><br>
 		<a href="reg.html">KWASU HAMATTARN SEMESTER EXAMINATION</a><br><br>
-	<a href="reg.html"><font color="white">Click here to proceed</font></a>
+	<a href="reg.html"<font color="white">Click here to proceed</font></a>
 	</body>
 	</html>
